# business_control_system

./: docker-compose.yaml
auth_service/: .gitignore  Dockerfile  pyproject.toml
auth_service/alembic/: env.py
auth_service/src/: config.py  main.py  metadata.py
auth_service/src/api/: __init__.py  exceptions.py
auth_service/src/api/routers/: __init__.py  auth.py  invite.py  user.py
auth_service/src/api/services/: __init__.py  auth.py  invite.py  user.py
auth_service/src/database/: db.py
auth_service/src/models/: __init__.py  account.py  company.py  invite.py  members.py  secret.py  user.py
auth_service/src/repositories/: __init__.py  account.py  member.py  user.py
auth_service/src/schemas/: account.py  company.py  invites.py  response.py  sign_up.py  token.py  user.py
auth_service/src/utils/: email_sender.py  invite.py  jwt_utils.py  repository.py  unit_of_work.py
company_structure_service/: Dockerfile  pyproject.toml
company_structure_service/src/: config.py  main.py  metadata.py
company_structure_service/src/api/: __init__.py  exceptions.py
company_structure_service/src/api/routers/: __init__.py  position.py  struct_adm.py
company_structure_service/src/api/services/: __init__.py  position.py  (+2 more)
company_structure_service/src/database/: __init__.py  db.py
company_structure_service/src/models/: __init__.py  position.py  struct_adm.py  struct_adm_position.py  user_position.py
company_structure_service/src/repositories/: __init__.py  position.py  struct_adm.py  struct_adm_position.py  user_position.py
company_structure_service/src/schemas/: position.py  response.py  struct_adm.py  struct_adm_position.py  token.py  user.py
company_structure_service/src/utils/: custom_types.py  jwt_utils.py  service.py  unit_of_work.py
